# msc-swc

./: .eslintrc.yml  .gitignore  .yarnrc.yml  Cargo.toml  README.md  back_transform.rs  index.d.ts  index.js  main.js  package.json
.github/workflows/: CI.yml  lint.yml
__test__/: app.spec.ts  index.spec.ts  module-resolver.spec.ts
__test__/app/: analyze.ts  app.js
__test__/app/config/: index.js
__test__/app/module/: index.ts
__test__/app/pages/index/: index.js  index.wxml
__test__/app/pages/log/: log.ts
__test__/app/utils/: util.ts
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs  minify.rs  module_resolver.rs  transform.rs  utils.rs
test-utils/: index.ts
